docs: acknowledge updated Brighter Shores rules
- Add prominent warning about rule changes
- Update FAQ to reflect that display reading is now prohibited
- Clarify project remains open source for educational purposes
- Advise users to use at their own risk

--- a/website/index.html
+++ b/website/index.html
@@ -198,7 +198,9 @@
         <h2>FAQs</h2>
         <div class="faq-item">
           <h3>Is this against the Brighter Shores terms of service?</h3>
-          <p>No. According to the <a href="https://brightershores.com/rules">Brighter Shores rules</a>, Brighter Merchant does not violate any rules under "Cheating". It's purely an application that reads your screen and tells you what to do — you still have to perform all the clicks yourself.</p>
+          <p><strong>Yes, as of the updated rules.</strong> The <a href="https://brightershores.com/rules">Brighter Shores rules</a> now explicitly prohibit "using or creating software which reads the display or memory or network traffic of the Brighter Shores client."</p>
+          <p>Brighter Merchant reads the game display using OCR to detect bounties, which violates this rule. <strong>Use at your own risk.</strong> We respect the developers' decision and understand if you choose not to use this tool.</p>
+          <p>This project will remain open source for educational purposes.</p>
         </div>
         <div class="faq-item">
           <h3>Is this secure? The app needs to read my screen? That doesn't seem safe.</h3>
